data/derived/sp14/progs/unify/prog3397.ml.out
Characters 8-20:
  extract ("bobby", 2);;
          ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
